--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Yuanna Liu"
 title_separator          : "-"
 name                     : &name "Yuanna Liu"
 description              : &description "PhD candidate at the University of Amsterdam"
-url                      : https://github.com/lynEcho/lynEcho.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://lynEcho.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "lynEcho/lynEcho.github.io"
 
