--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=MGGTtO4AAAAJ"
   inspire-hep      : 
   impactstory      : 
-  orcid            : 
+  orcid            : "https://orcid.org/0000-0002-9868-6578"
   semantic         : 
   pubmed           : 
   researchgate     :
