--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Yuanna Liu"
+  linkedin         : "https://www.linkedin.com/in/yuanna-liu-b37443317/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
